2006-02-21	ujwal

	* Fixed bug in PTYTextView: -contentFromX...

2006-02-21	dnedrow
	* Updated doco to clarify session behavior reported as bug in #1011334.

2006-02-20	ujwal

	* Rolled back _updateDisplayThread change in PseudoTerminal since that broke the
	  the anti-idle processing in non-current sessions.
	* Removed explicit session of next/previous session in PseudoTerminal:-closeSession. This 
	  is handled by the tabview.

2006-02-19	ujwal

	* _updateDisplayThread in PseudoTerminal updates only current session since
	  other sessions are off screen anyway.

2006-02-18	ujwal

	* Acquiring screenLock in VT100Screen when resizing.
	* Reduced idle CPU usage by about 90% by using a semaphore to signal data processing thread.
	* Saving and restoring width of Bookmarks drawer.
	* Updated Help files.

2006-02-17	ujwal
	
	* Rolled back some of the NSConnection code since tabview was having redraw problems when a tab was closed.
	* Some code cleanup.
	* Moved iTermNumberOfSessionsDidChange notification from closeSession to tabViewDidChangeNumberOfTabViewItems.
	* Fixed deadlock between VT100Terminal and PTYTextView.

2006-02-14  fabian

    * Bug fixes for crashes when sessions are closed.
    
2006-02-13  fabian

    * Removed NSConnection from PTYTask all together
    
2006-02-12	ujwal
	* Fixed memory leak in PTYTask.
	* Moved event handlers for NSMouseEntered and NSMouseExited to PTYWindow.
	* Using separate thread in PTYSession to process data read from file descriptor in PTYTask. When data is read, the 
	  PTYTask instance justs appends data to the STREAM in VT100Terminal. The separate thread in PTYSession now reads 
	  the STREAM and processes data.

2006-02-06  fabian

    * Updated website files for the new release.

2006-02-06	dnedrow

	* Set default terminal type to ANSI rather than VT100. This should
	  reduce the numerous support message re: "lack of color" support
          in the shell (eg. ls -G).

2006-02-05	dnedrow
